# public/docs/openapi.yaml
@@ -112,12 +112,12 @@ paths:
               schema:
                 type: object
                 example:
-                  message: 'The user_name field is required.'
+                  message: 'The userName field is required.'
                   errors: {  }
                 properties:
                   message:
                     type: string
-                    example: 'The user_name field is required.'
+                    example: 'The userName field is required.'
                   errors:
                     type: object
                     properties: {  }
@@ -130,7 +130,7 @@ paths:
             schema:
               type: object
               properties:
-                user_name:
+                userName:
                   type: string
                   description: Username.
                   example: suriel.dzul
@@ -139,7 +139,7 @@ paths:
                   description: Password.
                   example: suriel2024
               required:
-                - user_name
+                - userName
                 - password
       security: []
   /api/logout:
@@ -304,7 +304,7 @@ paths:
                 status:
                   type: string
                   description: ''
-                  example: active
+                  example: inactive
                   enum:
                     - active
                     - inactive
@@ -465,7 +465,7 @@ paths:
                 status:
                   type: string
                   description: ''
-                  example: inactive
+                  example: active
                   enum:
                     - active
                     - inactive
@@ -712,7 +712,7 @@ paths:
                 status:
                   type: string
                   description: ''
-                  example: inactive
+                  example: active
                   enum:
                     - active
                     - inactive
@@ -868,7 +868,7 @@ paths:
                 status:
                   type: string
                   description: ''
-                  example: inactive
+                  example: active
                   enum:
                     - active
                     - inactive
@@ -1103,7 +1103,7 @@ paths:
             schema:
               type: object
               properties:
-                id_category:
+                idCategory:
                   type: integer
                   description: 'Category ID.'
                   example: 1
@@ -1120,7 +1120,7 @@ paths:
                   description: ''
                   example: 'Eius et animi quos velit et.'
                   nullable: true
-                code_bar:
+                codeBar:
                   type: string
                   description: 'Must not be greater than 50 characters.'
                   example: v
@@ -1138,7 +1138,7 @@ paths:
                   type: number
                   description: 'Must be at least 0.'
                   example: 61
-                stock_control:
+                stockControl:
                   type: boolean
                   description: ''
                   example: true
@@ -1150,16 +1150,16 @@ paths:
                   type: number
                   description: 'Must be at least 0. Must not be greater than 100.'
                   example: 20
-                type_iva:
+                typeIva:
                   type: integer
                   description: 'IVA type (1=general/16%, 2=rate, 3=quota, 4=N/A).'
                   example: 1
-                rate_iva:
+                rateIva:
                   type: number
                   description: 'Must be at least 0. Must not be greater than 100.'
                   example: 3
                   nullable: true
-                quota_iva:
+                quotaIva:
                   type: number
                   description: 'Must be at least 0.'
                   example: 22
@@ -1168,26 +1168,26 @@ paths:
                   type: number
                   description: 'Must be at least 0. Must not be greater than 100.'
                   example: 5
-                imp_esp:
+                impEsp:
                   type: number
                   description: 'Must be at least 0. Must not be greater than 100.'
                   example: 10
                 status:
                   type: string
                   description: ''
-                  example: inactive
+                  example: active
                   enum:
                     - active
                     - inactive
               required:
-                - id_category
+                - idCategory
                 - key
                 - name
                 - price
                 - cost
-                - stock_control
+                - stockControl
                 - stock
-                - type_iva
+                - typeIva
   '/api/products/{id}':
     get:
       summary: 'Get product'
@@ -1326,7 +1326,7 @@ paths:
             schema:
               type: object
               properties:
-                id_category:
+                idCategory:
                   type: integer
                   description: 'The <code>id</code> of an existing record in the categories table.'
                   example: 16
@@ -1343,7 +1343,7 @@ paths:
                   description: ''
                   example: 'Eius et animi quos velit et.'
                   nullable: true
-                code_bar:
+                codeBar:
                   type: string
                   description: 'Must not be greater than 50 characters.'
                   example: v
@@ -1361,10 +1361,10 @@ paths:
                   type: number
                   description: 'Must be at least 0.'
                   example: 61
-                stock_control:
+                stockControl:
                   type: boolean
                   description: ''
-                  example: true
+                  example: false
                 stock:
                   type: number
                   description: 'Must be at least 0.'
@@ -1373,7 +1373,7 @@ paths:
                   type: number
                   description: 'Must be at least 0. Must not be greater than 100.'
                   example: 20
-                type_iva:
+                typeIva:
                   type: integer
                   description: ''
                   example: 1
@@ -1382,12 +1382,12 @@ paths:
                     - 2
                     - 3
                     - 4
-                rate_iva:
+                rateIva:
                   type: number
                   description: 'Must be at least 0. Must not be greater than 100.'
                   example: 3
                   nullable: true
-                quota_iva:
+                quotaIva:
                   type: number
                   description: 'Must be at least 0.'
                   example: 22
@@ -1396,14 +1396,14 @@ paths:
                   type: number
                   description: 'Must be at least 0. Must not be greater than 100.'
                   example: 5
-                imp_esp:
+                impEsp:
                   type: number
                   description: 'Must be at least 0. Must not be greater than 100.'
                   example: 10
                 status:
                   type: string
                   description: ''
-                  example: inactive
+                  example: active
                   enum:
                     - active
                     - inactive
@@ -1562,19 +1562,19 @@ paths:
             schema:
               type: object
               properties:
-                id_user_type:
+                idUserType:
                   type: integer
                   description: 'The <code>id</code> of an existing record in the user_types table.'
                   example: 16
-                first_name:
+                firstName:
                   type: string
                   description: 'Must not be greater than 100 characters.'
                   example: 'n'
-                last_name:
+                lastName:
                   type: string
                   description: 'Must not be greater than 100 characters.'
                   example: g
-                user_name:
+                userName:
                   type: string
                   description: 'Must not be greater than 100 characters.'
                   example: z
@@ -1589,15 +1589,15 @@ paths:
                 status:
                   type: string
                   description: ''
-                  example: active
+                  example: inactive
                   enum:
                     - active
                     - inactive
               required:
-                - id_user_type
-                - first_name
-                - last_name
-                - user_name
+                - idUserType
+                - firstName
+                - lastName
+                - userName
                 - email
                 - password
   '/api/users/{id}':
@@ -1738,19 +1738,19 @@ paths:
             schema:
               type: object
               properties:
-                id_user_type:
+                idUserType:
                   type: integer
                   description: 'The <code>id</code> of an existing record in the user_types table.'
                   example: 16
-                first_name:
+                firstName:
                   type: string
                   description: 'Must not be greater than 100 characters.'
                   example: 'n'
-                last_name:
+                lastName:
                   type: string
                   description: 'Must not be greater than 100 characters.'
                   example: g
-                user_name:
+                userName:
                   type: string
                   description: 'Must not be greater than 100 characters.'
                   example: z
@@ -1766,7 +1766,7 @@ paths:
                 status:
                   type: string
                   description: ''
-                  example: inactive
+                  example: active
                   enum:
                     - active
                     - inactive
